internal/gatewayapi/testdata/listenerset-https-tls-mixed-valid-and-missing-secret.out.yaml
gateways:
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    name: composite-gateway
    namespace: gateway
  spec:
    allowedListeners:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            allow-xls: "true"
    gatewayClassName: envoy-gateway-class
    listeners:
    - allowedRoutes:
        namespaces:
          from: All
      name: core-http
      port: 80
      protocol: HTTP
  status:
    attachedListenerSets: 1
    listeners:
    - attachedRoutes: 0
      conditions:
      - lastTransitionTime: null
        message: Sending translated listener configuration to the data plane
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: null
        message: Listener has been successfully translated
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      name: core-http
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
      - group: gateway.networking.k8s.io
        kind: GRPCRoute
httpRoutes:
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    name: route-valid
    namespace: default
  spec:
    parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: https-xls
      namespace: xls
      sectionName: extra-https-valid
    rules:
    - backendRefs:
      - name: service-1
        port: 8080
  status:
    parents:
    - conditions:
      - lastTransitionTime: null
        message: Route is accepted
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Resolved all the Object references for the Route
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
      parentRef:
        group: gateway.networking.k8s.io
        kind: ListenerSet
        name: https-xls
        namespace: xls
        sectionName: extra-https-valid
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    name: route-missing-cert
    namespace: default
  spec:
    parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: https-xls
      namespace: xls
      sectionName: extra-https-missing-cert
    rules:
    - backendRefs:
      - name: service-1
        port: 8080
  status:
    parents:
    - conditions:
      - lastTransitionTime: null
        message: Route is accepted
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Resolved all the Object references for the Route
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
      parentRef:
        group: gateway.networking.k8s.io
        kind: ListenerSet
        name: https-xls
        namespace: xls
        sectionName: extra-https-missing-cert
infraIR:
  gateway/composite-gateway:
    proxy:
      listeners:
      - name: gateway/composite-gateway/core-http
        ports:
        - containerPort: 10080
          name: http-80
          protocol: HTTP
          servicePort: 80
      - name: gateway/composite-gateway/xls/https-xls/extra-https-valid
        ports:
        - containerPort: 8443
          name: https-8443
          protocol: HTTPS
          servicePort: 8443
      metadata:
        labels:
          gateway.envoyproxy.io/owning-gateway-name: composite-gateway
          gateway.envoyproxy.io/owning-gateway-namespace: gateway
        ownerReference:
          kind: GatewayClass
          name: envoy-gateway-class
      name: gateway/composite-gateway
      namespace: envoy-gateway-system
listenerSets:
- apiVersion: gateway.networking.k8s.io/v1
  kind: ListenerSet
  metadata:
    name: https-xls
    namespace: xls
  spec:
    listeners:
    - allowedRoutes:
        namespaces:
          from: All
      name: extra-https-valid
      port: 8443
      protocol: HTTPS
      tls:
        certificateRefs:
        - group: ""
          kind: Secret
          name: tls-secret-1
          namespace: xls
        mode: Terminate
    - allowedRoutes:
        namespaces:
          from: All
      name: extra-https-missing-cert
      port: 8444
      protocol: HTTPS
      tls:
        certificateRefs:
        - group: ""
          kind: Secret
          name: tls-secret-missing
          namespace: xls
        mode: Terminate
    parentRef:
      name: composite-gateway
      namespace: gateway
  status:
    conditions:
    - lastTransitionTime: null
      message: All listeners are accepted
      reason: Accepted
      status: "True"
      type: Accepted
    - lastTransitionTime: null
      message: Some listeners are not programmed
      reason: Programmed
      status: "True"
      type: Programmed
    listeners:
    - attachedRoutes: 1
      conditions:
      - lastTransitionTime: null
        message: Sending translated listener configuration to the data plane
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: null
        message: Listener has been successfully translated
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      - lastTransitionTime: null
        message: No conflicts detected
        reason: NoConflicts
        status: "False"
        type: Conflicted
      name: extra-https-valid
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
      - group: gateway.networking.k8s.io
        kind: GRPCRoute
    - attachedRoutes: 1
      conditions:
      - lastTransitionTime: null
        message: 'No valid secrets exist: certificate refs 0: Secret xls/tls-secret-missing
          does not exist.'
        reason: InvalidCertificateRef
        status: "False"
        type: ResolvedRefs
      - lastTransitionTime: null
        message: Listener has been successfully translated
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Listener is invalid, see other Conditions for details.
        reason: ListenersNotValid
        status: "False"
        type: Programmed
      name: extra-https-missing-cert
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
      - group: gateway.networking.k8s.io
        kind: GRPCRoute
xdsIR:
  gateway/composite-gateway:
    accessLog:
      json:
      - path: /dev/stdout
    globalResources:
      proxyServiceCluster:
        metadata:
          kind: Service
          name: envoy-gateway-composite-gateway-acff6ccf
          namespace: envoy-gateway-system
          sectionName: "8080"
        name: gateway/composite-gateway
        settings:
        - addressType: IP
          endpoints:
          - host: 7.6.5.4
            port: 8080
            zone: zone1
          metadata:
            kind: Service
            name: envoy-gateway-composite-gateway-acff6ccf
            namespace: envoy-gateway-system
            sectionName: "8080"
          name: gateway/composite-gateway
          protocol: TCP
    http:
    - address: 0.0.0.0
      externalPort: 80
      hostnames:
      - '*'
      metadata:
        kind: Gateway
        name: composite-gateway
        namespace: gateway
        sectionName: core-http
      name: gateway/composite-gateway/core-http
      path:
        escapedSlashesAction: UnescapeAndRedirect
        mergeSlashes: true
      port: 10080
    - address: 0.0.0.0
      externalPort: 8443
      hostnames:
      - '*'
      metadata:
        kind: Gateway
        name: composite-gateway
        namespace: gateway
        sectionName: extra-https-valid
      name: gateway/composite-gateway/xls/https-xls/extra-https-valid
      path:
        escapedSlashesAction: UnescapeAndRedirect
        mergeSlashes: true
      port: 8443
      routes:
      - destination:
          metadata:
            kind: HTTPRoute
            name: route-valid
            namespace: default
          name: httproute/default/route-valid/rule/0
          settings:
          - addressType: IP
            endpoints:
            - host: 7.7.7.7
              port: 8080
            metadata:
              kind: Service
              name: service-1
              namespace: default
              sectionName: "8080"
            name: httproute/default/route-valid/rule/0/backend/0
            protocol: HTTP
            weight: 1
        hostname: '*'
        isHTTP2: false
        metadata:
          kind: HTTPRoute
          name: route-valid
          namespace: default
        name: httproute/default/route-valid/rule/0/match/-1/*
      tls:
        alpnProtocols: null
        certificates:
        - certificate: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURFVENDQWZtZ0F3SUJBZ0lVRUZNaFA5ZUo5WEFCV3NRNVptNmJSazJjTE5Rd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0ZqRVVNQklHQTFVRUF4TUxabTl2TG1KaGNpNWpiMjB3SGhjTk1qUXdNakk1TURrek1ERXdXaGNOTXpRdwpNakkyTURrek1ERXdXakFXTVJRd0VnWURWUVFERXd0bWIyOHVZbUZ5TG1OdmJUQ0NBU0l3RFFZSktvWklodmNOCkFRRUJCUUFEZ2dFUEFEQ0NBUW9DZ2dFQkFNdmRxTzcwVVNCTGM1RjdoM1Z4VWd2MU4rSk5vTldnditWS3JtdUsKWGlqM2VQRCtjOHVWN0tEU05VRmo3NUhRUC93UTVLdjg5elVPRXl6N0I2bWpwdXRmMGdpNHpuOUd5Wnl6c2FKbwpScFk2S [...]
          name: xls/tls-secret-1
          privateKey: '[redacted]'
    readyListener:
      address: 0.0.0.0
      ipFamily: IPv4
      path: /ready
      port: 19003
